[package]
name = "realis-near"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
near-contract-standards = "4.0.0"
near-sdk = "4.0.0"
hex = "0.4.3"
primitive-types = "0.7.0"

[dev-dependencies]
workspaces = { git = "https://github.com/near/workspaces-rs", package = "workspaces", version = "0.3.0" }
anyhow = "1.0.57"
tokio =  "1.19.2"