[package]
name = "nft-token-contract"
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-contract-standards = "4.0.0"
near-sdk = "4.0.0"

[dev-dependencies]
near-units = "0.2.0"
workspaces = { version = "0.6.0", features = ["unstable"] }
anyhow = "1.0.66"
tokio = { version = "1.21.2", features = ["test-util"], default-features = false }
test-utils = { path = "../test-utils" }
